# Home_Task_Wargaming

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
db/: database.py  models.py
tests/: conftest.py  generate_data.py  test_ships.py
